--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -1,8 +1,36 @@
-#messages li{
+* { margin: 0; padding: 0; box-sizing: border-box; }
+body { font: 13px Helvetica, Arial; }
+form { 
+    background: #000; 
+    padding: 3px; 
+    position: fixed; 
+    bottom: 0; 
+    width: 100%; 
+}
+form input { 
+    border: 0; 
+    padding: 10px; 
+    width: 90%; 
+    margin-right: .5%; 
+}
+form button { 
+    width: 9%; 
+    background: rgb(130, 224, 255); 
+    border: none; 
+    padding: 10px; 
+}
+#messages { 
+    list-style-type: none; 
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 0; 
+}
+.speech-bubble{
     word-wrap: break-word;
+    max-width: 300px;
+    display: inline-block;
     border-radius: 25px;
     padding: 10px;
     margin-top: 10px;
-    margin-bottom: 10px;
     background: dodgerblue;
 }
