--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -1,23 +1,58 @@
-* { margin: 0; padding: 0; box-sizing: border-box; }
-body { font: 13px Helvetica, Arial; }
-form { 
-    background: #000; 
+* { 
+    margin: 0; 
+    padding: 0; 
+    box-sizing: border-box; 
+}
+body { 
+    font-size: 13px;
+    font-family: 'Varela Round', sans-serif; 
+    letter-spacing: 0.5px;
+}
+.message-output{
+    position: fixed;
+    width: calc(100% - 40px);
+    height: calc(100% - 50px);
+    overflow-y: auto;
+}
+form {  
     padding: 3px; 
     position: fixed; 
     bottom: 0; 
-    width: 100%; 
+    width: 100%;
 }
 form input { 
     border: 0; 
     padding: 10px; 
     width: 90%; 
-    margin-right: .5%; 
+    margin: 5px;
+    margin-right: .5%;
+    border-radius: 15px;
+    font-size: 13px;
+    font-family: 'Varela Round', sans-serif; 
+    letter-spacing: 0.5px;
+    border: solid .5px lightskyblue; 
+}
+form input:focus{
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.3);
 }
 form button { 
     width: 9%; 
-    background: rgb(130, 224, 255); 
-    border: none; 
-    padding: 10px; 
+    line-height: 18px;
+ 
+    background: white;
+    border: none;
+    border-radius: 10px;  
+    padding: 10px;
+    border: solid .5px lightskyblue; 
+    
+    font-size: 13px;
+    font-family: 'Varela Round', sans-serif; 
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    transition: all .2s ease-in-out; 
+}
+form button:hover{
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
 }
 #messages { 
     list-style-type: none; 
@@ -28,9 +63,10 @@ form button {
 .speech-bubble{
     word-wrap: break-word;
     max-width: 300px;
+    position: relative;
     display: inline-block;
     border-radius: 25px;
     padding: 10px;
     margin-top: 10px;
-    background: dodgerblue;
+    background: lightskyblue;
 }
