--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -1,3 +1,4 @@
+/*-------------------------------------BODY---------------------------------------------*/
 * { 
     margin: 0; 
     padding: 0; 
@@ -8,6 +9,20 @@ body {
     font-family: 'Varela Round', sans-serif; 
     letter-spacing: 0.5px;
 }
+
+::-webkit-scrollbar{
+    width: 8px;
+}
+::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background-color: #a6a6a6;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+}
+::-webkit-scrollbar-track{
+    border-radius: 10px;
+}
+
+/*-------------------------------------MESSAGE BODY---------------------------------------------*/
 .message-output{
     position: fixed;
     width: calc(100% - 40px);
@@ -23,20 +38,23 @@ form {
 form input { 
     border: 0; 
     padding: 10px; 
-    width: 90%; 
+    width: calc(90%-20px); 
     margin: 5px;
+    margin-left: 20px;
     margin-right: .5%;
     border-radius: 15px;
     font-size: 13px;
     font-family: 'Varela Round', sans-serif; 
     letter-spacing: 0.5px;
     border: solid .5px lightskyblue; 
+    outline: 0;
 }
 form input:focus{
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.3);
 }
 form button { 
-    width: 9%; 
+    width: calc(9%-20px);
+    margin-right: 20px; 
     line-height: 18px;
  
     background: white;
