--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -47,13 +47,14 @@ form {
     max-width: 300px;
     position: relative;
     display: inline-block;
+    font-size: 13px;
     border-radius: 25px;
     padding: 10px;
     margin-top: 2px;
-    margin-bottom: 10px;
     background: lightskyblue;
 }
 .sender-name{
+    margin-top: 10px;
     font-size: 8pt;
     color: grey;
 }
