--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -127,3 +127,34 @@ form button:hover{
 form button:focus{
     outline: 0;
 }
+
+.arrow {
+    border: solid rgb(145, 145, 145);
+    border-width: 0 10px 10px 0;
+    display: inline-block;
+    padding: 18px;
+    margin-right: 10px;
+  }
+  .right {
+      transform: rotate(-45deg);
+      -webkit-transform: rotate(-45deg);
+  }
+.next-page{
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: calc(50% - 100px);
+    right: 10px;
+    border-radius: 50%;
+    background: rgb(219, 219, 219);
+    line-height: 140px;
+    vertical-align: middle;
+    cursor: pointer;
+    opacity: .4;
+    box-shadow: 0 0 2px rgba(0,0,0,0.15);
+    transition: box-shadow 0.2s ease-in-out;
+    z-index: 10;
+}
+.next-page:hover{
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.808);
+}
