repair left right bugs

--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -230,9 +230,6 @@ form button:focus{
 .move-left{
     transform: translate(-100vw, 0);
 }
-.move-right{
-    transform: translate(100vw, 0);
-}
 .to-left{
     right: calc(100vw - 110px);
 }
@@ -250,4 +247,7 @@ form button:focus{
 .dashboard{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
+}
+.background-grey{
+    background: #282828;
 }
