--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -25,7 +25,6 @@
 .canvas{
     width: 100vw;
     height: 100vh;
-    position: relative;
 }
 
 /*-------------------------------------MESSAGE BODY RESPONSIVE 1---------------------------------------------*/
@@ -250,4 +249,8 @@ form button:focus{
 }
 .background-grey{
     background: #282828;
+}
+#mainContainer{
+    transition: all .3s ease-out; 
+    width: 200vw;
 }
