--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -274,7 +274,7 @@ form button:focus{
 .hide-navbar{
     transform: translate3d(0, -70px, 0);
 }
-@media screen and (min-width: 420px){
+@media screen and (min-width: 865px){
     #profile{
         grid-template-rows: 1fr;
         grid-template-columns: 210px 615px;
@@ -282,6 +282,7 @@ form button:focus{
     }
     #username{
         font-size: 41pt;
+        margin: auto;
     }
     #username:hover{
         font-size: 43pt;
@@ -295,10 +296,10 @@ form button:focus{
     }
     #username{
         font-size: 20pt;
-        margin-top: 15px;
+        margin: 15px 0 0 0;
     }
     #username:hover{
-        font-size: 22pt;
+        font-size: 21pt;
     }
 }
 /*-------------------------------------CANVAS PROFILE DEFAULT---------------------------------------------*/
@@ -383,10 +384,6 @@ form button:focus{
 
     transition: all .5s ease;
 }
-/* #contacts_filter > label > input:focus{
-    width: 100%;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(67, 67, 67,.3);
-} */
 #contacts_filter > label{
     display: block;
     margin: 0;
@@ -395,5 +392,10 @@ form button:focus{
     width: 40px;
 }
 #smallProfilePicture{
-    width: 40px; height:40px; border-radius: 50%; margin: auto; overflow: hidden;
+    width: 40px; 
+    height:40px; 
+    
+    border-radius: 50%; 
+    margin: auto; 
+    overflow: hidden;
 }
